tests/ui/rfc-2632-const-trait-impl/call-generic-method-pass.stderr
error: const `impl` for trait `PartialEq` which is not marked with `#[const_trait]`
  --> $DIR/call-generic-method-pass.rs:9:12
   |
LL | impl const PartialEq for S {
   |            ^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/call-generic-method-pass.rs:18:32
   |
LL | const fn equals_self<T: ~const PartialEq>(t: &T) -> bool {
   |                                ^^^^^^^^^

error: aborting due to 2 previous errors

